# nidrs

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  LICENSE  cog.toml  meta_parser.md  readme.md  readme_zh.md  rustfmt.toml
example/: Cargo.toml  expand.sh  readme.text
example-expand/: Cargo.toml
example-expand/src/: main.rs
example/src/: main.rs
example/src/app/: controller.rs  dto.rs  exception.rs  mod.rs  service.rs
example/src/conf/: mod.rs  options.rs  service.rs
example/src/log/: interceptor.rs  mod.rs  service.rs
example/src/modules/: mod.rs
example/src/modules/conf/: mod.rs  options.rs
example/src/modules/shared/: mod.rs
example/src/modules/user/: controller.rs
example/src/shared/: fn_test.rs
example/src/user/: controller.rs  mod.rs  service.rs
examples/hello/: Cargo.toml  expand.sh  readme.md  run-expand.sh
examples/hello-diesel/: .env  Cargo.toml  expand.sh
examples/hello-diesel/src/app/: controller.rs  dto.rs  mod.rs  service.rs
examples/hello-diesel/src/interceptors/: json_interceptor.rs
examples/hello-diesel/src/models/entities/: user.rs
examples/hello-diesel/src/modules/user/: controller.rs  service.rs
examples/hello-expand/: Cargo.toml
examples/hello-expand/src/: main.rs
examples/hello-orm-diesel-multi/: .env  Cargo.toml  db.sqlite3
examples/hello-orm-diesel-multi/examples/: expand.rs
examples/hello-orm-diesel-multi/src/app/: mod.rs  service.rs
examples/hello-orm-diesel-multi/src/models/entities/: user.rs
examples/hello-orm-diesel-multi/src/modules/user/: controller.rs  dto.rs
examples/hello-orm-diesel-mysql/: Cargo.toml
examples/hello-orm-diesel-mysql-async/: Cargo.toml
examples/hello-orm-diesel-mysql-async/migrations/2024-05-01-150828_create_users/: up.sql
examples/hello-orm-diesel-mysql-async/src/app/: mod.rs
examples/hello-orm-diesel-mysql-async/src/models/: schema.rs
examples/hello-orm-diesel-mysql/src/: main.rs  test.rs
examples/hello-orm-diesel-mysql/src/app/: controller.rs  dto.rs  mod.rs
examples/hello-orm-diesel-mysql/src/models/entities/: user.rs
examples/hello-orm-diesel-mysql/src/modules/user/: controller.rs  dto.rs  service.rs
examples/hello-orm-diesel-pg/: .env  Cargo.toml  diesel.toml
examples/hello-orm-diesel-pg-async/: Cargo.toml  request.http
examples/hello-orm-diesel-pg-async/migrations/2024-05-01-150828_create_users/: up.sql
examples/hello-orm-diesel-pg-async/migrations/2025-01-15-164941_create_users/: up.sql
examples/hello-orm-diesel-pg-async/src/: test.rs
examples/hello-orm-diesel-pg-async/src/app/: mod.rs
examples/hello-orm-diesel-pg/src/models/: schema.rs
examples/hello-orm-diesel-sqlite/: Cargo.toml  db.sqlite3  diesel.toml  expand.sh
examples/hello-orm-diesel-sqlite-async/: .env  Cargo.toml
examples/hello-orm-diesel-sqlite-async/src/app/: controller.rs
examples/hello-orm-diesel-sqlite-async/src/models/: schema.rs
examples/hello-orm-diesel-sqlite-async/src/models/entities/: user.rs
examples/hello-orm-diesel-sqlite/examples/: expand.rs
examples/hello-orm-diesel-sqlite/migrations/2024-05-01-150828_create_users/: up.sql
examples/hello-orm-diesel-sqlite/src/: main.rs  test.rs
examples/hello-orm-diesel-sqlite/src/app/: controller.rs  dto.rs  mod.rs
examples/hello-orm-diesel-sqlite/src/interceptors/: json_interceptor.rs  mod.rs
examples/hello-orm-diesel-sqlite/src/models/: mod.rs
examples/hello-orm-diesel-sqlite/src/models/entities/: user.rs
examples/hello-orm-diesel-sqlite/src/modules/user/: controller.rs  dto.rs  mod.rs  service.rs
examples/hello-orm-diesel-sqlite/src/shared/: fn_test.rs
examples/hello/examples/: expand.rs
examples/hello/src/: main.rs
examples/hello/src/app/: controller.rs  dto.rs  exception.rs  interceptor.rs  mod.rs  service.rs
examples/hello/src/modules/: mod.rs
examples/no-macro/: Cargo.toml
examples/no-macro/src/: lib.rs  main.rs
examples/scapp/: .gitignore  Cargo.toml  README.md
examples/scapp/apps/app/: .env  Cargo.toml
examples/scapp/apps/app/examples/: expand.rs
examples/scapp/apps/app/migrations/2024-10-06-122009_first_tables/: down.sql  up.sql
examples/scapp/apps/app/src/: main.rs
examples/scapp/apps/app/src/app/: controller.rs  mod.rs  service.rs
examples/scapp/apps/app/src/models/: mod.rs  schema.rs
examples/scapp/apps/app/src/models/dao/: downlogs.rs  mod.rs  resources.rs  rooms.rs  users.rs  users_extra.rs
examples/scapp/apps/app/src/modules/: mod.rs
examples/scapp/apps/app/src/modules/auth/: controller.rs  dto.rs  mod.rs
examples/scapp/apps/app/src/modules/user/: controller.rs  dto.rs  mod.rs  service.rs
examples/scapp/libs/datasets/: Cargo.toml
examples/scapp/libs/datasets/src/: lib.rs  role.rs
examples/scapp/libs/macros/: Cargo.toml
examples/scapp/libs/macros/src/: lib.rs
examples/scapp/libs/shared/: Cargo.toml
examples/scapp/libs/shared/src/: test_tools.rs
examples/single-hello/: Cargo.toml
examples/single-hello/examples/: expand.rs
examples/single-hello/src/: app.rs  lib.rs  main.rs  user.rs
libs/macro-args/: Cargo.toml
libs/macro-args/src/: lib.rs  macro_args.rs
libs/macro-args/src/macro_args/: def.rs  utils.rs
libs/metamap/: CHANGELOG.md  Cargo.toml  readme-zh.md  readme.md
libs/metamap/src/: lib.rs
libs/syn-args/: CHANGELOG.md  Cargo.toml  expand.sh  readme-zh.md  readme.md  run-expand.sh
libs/syn-args-derive/: CHANGELOG.md  Cargo.toml  readme.md
libs/syn-args-derive/src/: lib.rs  macro_args.rs  macro_impl.rs
libs/syn-args-derive/src/macro_args/: utils.rs
libs/syn-args-derive/src/snapshots/: syn_args_derive__macro_impl__tests__impl_args_parse.snap
libs/syn-args-derive/tests/: test.rs
libs/syn-args/examples/: test-expand.rs  test.rs
libs/syn-args/src/: lib.rs  macro_args.rs  macro_impl.rs  syn_args.rs  traits.rs  transform.rs
libs/syn-args/src/macro_args/: def.rs  utils.rs
libs/syn-args/src/macro_args/def/: array.rs  bool.rs  expr.rs  extends.rs  float.rs  int.rs  native.rs  null.rs  object.rs  options.rs  path_ident.rs  string.rs
scripts/cargo-set/: Cargo.toml  readme.md
scripts/cargo-set/src/: main.rs
(+18 files in other folders)
