[workspace]
members = ["packages/*", "examples/*", "scripts/*", "libs/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/nidrs/nidrs.git"
repository = "https://github.com/nidrs/nidrs.git"
license = "MIT"

[workspace.dependencies]
nidrs = { path = "packages/nidrs", version = "0.0.11" }
nidrs-extern = { path = "packages/nidrs-extern", version = "0.0.11" }
nidrs-macro = { path = "packages/nidrs-macro", version = "0.0.11" }
nidrs-diesel = { path = "packages/nidrs-diesel", version = "0.0.3" }
nidrs-valid = { path = "packages/nidrs-valid", version = "0.0.1" }
nidrs-valid-macro = { path = "packages/nidrs-valid-macro", version = "0.0.1" }
syn-args = { path = "libs/syn-args", version = "0.2.1" }
syn-args-derive = { path = "libs/syn-args-derive", version = "0.2.1" }
