[workspace]
members = ["packages/*", "examples/*", "scripts/*", "libs/*"]
exclude = ["examples/scapp"]                                  # 添加这一行
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/nidrs/nidrs.git"
repository = "https://github.com/nidrs/nidrs.git"
license = "MIT"

[workspace.dependencies]
nidrs = { path = "packages/nidrs", version = "0.3.1" }
nidrs-extern = { path = "packages/nidrs-extern", version = "0.2.1" }
nidrs-macro = { path = "packages/nidrs-macro", version = "0.2.2" }
nidrs-diesel = { path = "packages/nidrs-diesel", version = "0.1.1" }
nidrs-valid = { path = "packages/nidrs-valid", version = "0.2.0" }
nidrs-valid-macro = { path = "packages/nidrs-valid-macro", version = "0.2.0" }
nidrs-openapi = { path = "packages/nidrs-openapi", version = "0.3.0" }
nidrs-openapi-macro = { path = "packages/nidrs-openapi-macro", version = "0.3.1" }
syn-args = { path = "libs/syn-args", version = "0.4.1" }
syn-args-derive = { path = "libs/syn-args-derive", version = "0.3.1" }
metamap = { path = "libs/metamap", version = "0.3.0" }
