[package]
name = "example-expand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "json"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "typed-routing"] }
tokio = {version = "1.36.0", features = ["full"]}
tower = "0.4.13"
serde_json = "1.0.115"
serde = "1.0.197"
nidrs = { path = "../packages/nidrs" }
nidrs-macro = { path = "../packages/nidrs-macro" }
nidrs-extern = { path = "../packages/nidrs-extern" }


[toolchain]
channel = "nightly"