[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "typed-routing"] }
tokio = {version = "1.36.0", features = ["full"]}
tower = "0.4.13"
nestrs = { path = "../packages/nestrs" }
nestrs-macro = { path = "../packages/nestrs-macro" }
serde_json = "1.0.115"
serde = "1.0.197"
