[package]
name = "hello-diesel"
version = "0.1.0"
publish = false
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "json"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "typed-routing"] }
tokio = {version = "1.36.0", features = ["full"]}
tower = "0.4.13"
serde_json = "1.0.115"
serde = {version = "1.0.197", features = ["derive"]}
thiserror = "1.0.58"
anyhow = "1.0.82"

nidrs = { workspace = true }
nidrs-macro = { workspace = true }
nidrs-extern = { workspace = true }

nidrs-diesel = { workspace = true, features = ["sqlite"] }
diesel = { version = "2.1.6", default-features = false, features = ["sqlite", "chrono", "r2d2"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"