[package]
name = "hello-orm-diesel-multi"
version = "0.1.0"
publish = false
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nidrs = { workspace = true, features = ["tower", "serde", "openapi", "valid"] }
nidrs-macro = { workspace = true }
nidrs-extern = { workspace = true }

nidrs-diesel = { workspace = true, features = ["mysql_async", "sqlite_async"] }
diesel = { version = "2.2.3", default-features = false, features = ["chrono", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.5.2" }

serde_json = "1.0.115"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
utoipa = { version = "5", features = ["chrono", "macros"] }
