[workspace]
members = ["apps/*", "libs/*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/nidrs/nidrs.git"
repository = "https://github.com/nidrs/nidrs.git"
license = "MIT"

[workspace.dependencies]
nidrs = { path = "../../packages/nidrs", features = ["tower", "serde", "openapi"]  }
nidrs-macro = { path = "../../packages/nidrs-macro" }
nidrs-extern = { path = "../../packages/nidrs-extern" }
nidrs-diesel = { path = "../../packages/nidrs-diesel", features = ["postgres"] }

shared = { path = "libs/shared" }
macros = { path = "libs/macros" }
datasets = { path = "libs/datasets" }
