[package]
name = "single-hello"
version = "0.1.0"
publish = false
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
serde = { version = "1.0.193", features = ["derive"] }

nidrs = { workspace = true, features = ["tower", "serde", "openapi", "valid"] }
nidrs-macro = { workspace = true }
nidrs-extern = { workspace = true }
