[package]
name = "syn-args-derive"
version = "0.0.1"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
syn = { version = "2.0.75", features = ["full"] }
syn-serde = { version = "0.3.1", features = ["json"] }
quote = "1.0.36"
once_cell = "1.19.0"
anyhow = "1.0.82"
syn-args = { workspace = true }
