[package]
name = "syn-args-derive"
version = "0.0.1"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
syn = { version = "2.0.75", features = ["full"] }
quote = "1.0.36"
# syn-args = { workspace = true }
