[package]
name = "syn-args-derive"
version = "0.3.1"
authors = ["Lydanne <wumacoder@gmail.com>"]
description = "syn-args is a library for parsing function arguments."
keywords = ["syn-args", "syn"]
categories = ["development-tools"]

edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
syn = { version = "2.0.75", features = ["full"] }
quote = "1.0.36"
once_cell = "1.19.0"

[dev-dependencies]
insta = "1.39.0"
