[package]
name = "syn-args"
version = "0.2.0"
authors = ["Lydanne <wumacoder@gmail.com>"]
description = "syn-args is a library for parsing function arguments."
keywords = ["syn-args", "syn"]
categories = ["development-tools"]

edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
quote = "1.0.36"
proc-macro2 = "1.0.86"
syn = { version = "2.0.75", features = ["full"] }
anyhow = "1.0.82"

syn-args-derive = { workspace = true }
