[package]
name = "macros"
version = "0.0.1"
publish = false
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
nidrs-extern = { workspace = true }

proc-macro2 = "1.0.79"
syn = { version = "2.0.53", features = ["full"] }
syn-serde = { version = "0.3", features = ["json"] }
quote = "1.0.35"